--- a/style.css
+++ b/style.css
@@ -3,10 +3,14 @@
     --cinza-secundario:#C0C0C0;
     --botao-azul:#167BF7;
     --cor-de-fundo:#00030C;
+    --fonte-principal:'inter';
 }
 body{
     background-color: var(--cor-de-fundo);
-    color:var(--branco-principal);
+    color: var(--branco-principal);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }
 *{
     margin: 0;
@@ -14,7 +18,32 @@ body{
 }
 .principal{
     background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+
+}
+.container-botao{
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branco-principal);
+    display: block;
+    text-decoration: none;
 }
 .container{
     height: 100vh;
+    display: grid;
+    grid-template-columns:50% 50% ;
+}
+.botao-secundario{
+    background-color: transparent;
+    border: 2px solid var(--branco-principal);
+}
+.container-aviso{
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+.container-titulo{
+    font-size: 28px;
+    font-weight: 700;
 }
